syntax = "proto3";

package pb;

option go_package = "github.com/yushk/sport_backend/manager/pb;pb";

import "work.proto";

message HomeWork {
    string id = 1;
    repeated ApplyItem apply_items = 2;
    string apply_user_id = 3;
    string club_name = 4;
    int64 create = 5;
    int64 update = 6;
    string status = 7;
}

message ApplyItem {
    repeated FileInfo files = 2;
    string template_id = 3;
    string value = 4;
    string review_value = 5;
    string review_user = 1;
}

service HomeWorkManager {
    rpc CreateHomeWork(CreateHomeWorkRequest) returns (HomeWork) {}
    rpc GetHomeWork(GetHomeWorkRequest) returns (HomeWork) {}
    rpc UpdateHomeWork(UpdateHomeWorkRequest) returns (HomeWork) {}
    rpc DeleteHomeWork(DeleteHomeWorkRequest) returns (HomeWork) {}
    rpc GetHomeWorks(GetHomeWorksRequest) returns (GetHomeWorksReply) {}
}

message CreateHomeWorkRequest {
    HomeWork data = 1;
}

message GetHomeWorkRequest {
    string id = 1;
}

message UpdateHomeWorkRequest {
    string id = 1;
    HomeWork data = 2;
}

message DeleteHomeWorkRequest {
    string id = 1;
}

message GetHomeWorksRequest {
    string query = 1;
    int64 skip = 2;
    int64 limit = 3;
}

message GetHomeWorksReply {
    int64 total_count = 1;
    repeated HomeWork items = 2;
}